--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "prisma": "^5.6.0",
     "ts-node-dev": "^2.0.0",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
