--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "morgan": "^1.10.0",
     "prisma": "^5.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
