--- a/new-front/package.json
+++ b/new-front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-overlays": "^5.2.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
