--- a/new-front/package.json
+++ b/new-front/package.json
@@ -16,6 +16,7 @@
     "mui-file-input": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-overlays": "^5.2.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-query": "^3.39.3",
